FIX slim header overflow flopping onto page

--- a/css/globalslimheader.css
+++ b/css/globalslimheader.css
@@ -1,7 +1,7 @@
 /* Slimheader Global */
 .ui-layout-container{min-width:1100px;overflow:scroll;}
 #CentralSpaceContainer {margin: 20px 25px 20px;padding: 0 282px 0 0;text-align: left;}
-#Header {margin: 0;padding: 5px 25px 5px 25px;height: 40px;background-image:none;}
+#Header {margin: 0;padding: 5px 25px 5px 25px;background-image:none;}
 #HeaderNav1, #HeaderNav2 {margin:0;padding:0;line-height: 35px;}
 #HeaderNav1 {float:right;}
 #HeaderNav2 {float:left; padding-left: 10px;}
